fixing footer and form margin overlap

--- a/css/style.production.css
+++ b/css/style.production.css
@@ -485,6 +485,7 @@ form {
   max-width:400px;
   max-height:400px;
   margin-bottom: 50px;
+  margin-bottom: 100px;
 }
 
 .inputField {
